# spectry

./: .pre-commit-config.yaml  README.md  bad_code.py  example.py  pyproject.toml
.github/workflows/: lint.yml
